--- a/bower.json
+++ b/bower.json
@@ -2,8 +2,9 @@
   "name": "blackbirdjs",
   "private": true,
   "dependencies": {
-    "jquery": "~2.1.0",
-    "bootstrap": "~3.1.1"
+    "jquery": "~2.1.1",
+    "bootstrap": "~3.1.1",
+    "jgrowl": "~1.3.0"
   },
   "devDependencies": {}
 }
