--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "jquery": "~2.1.1",
     "bootstrap": "~3.1.1",
-    "jgrowl": "~1.3.0"
+    "jgrowl": "~1.3.0",
+    "grapnel": "~0.4.2"
   },
   "devDependencies": {}
 }
