--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^0.7.3",
-    "grunt-bower-install": "^1.6.0",
     "grunt-concurrent": "^0.5.0",
     "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-compress": "^0.9.1",
     "grunt-contrib-concat": "^0.4.0",
     "grunt-contrib-connect": "^0.7.1",
     "grunt-contrib-copy": "^0.5.0",
@@ -29,6 +29,7 @@
     "grunt-svgmin": "^0.4.0",
     "grunt-text-replace": "^0.3.11",
     "grunt-usemin": "^2.1.1",
+    "grunt-wiredep": "^1.7.0",
     "jpegtran-bin": "^0.2.6",
     "jshint-stylish": "^0.2.0",
     "load-grunt-tasks": "^0.4.0",
