--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,9 @@
     "bootstrap": "~3.1.1",
     "jgrowl": "~1.3.0",
     "grapnel": "~0.4.2",
-    "oboe": "~1.14.7"
+    "oboe": "~1.14.7",
+    "mustache": "~0.8.1",
+    "lscache": "~1.0.2"
   },
   "devDependencies": {}
 }
