--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "grapnel": "~0.4.2",
     "oboe": "~1.14.7",
     "mustache": "~0.8.1",
-    "lscache": "~1.0.2"
+    "lscache": "~1.0.2",
+    "owlcarousel": "~1.3.2"
   },
   "devDependencies": {}
 }
